[package]
name = "comfy-wars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#comfy = { git = "https://github.com/darthdeus/comfy"}

macroquad = "0.4.11"
# egui integration
egui-miniquad = {git = "https://github.com/kampffrosch94/egui-miniquad", branch = "miniquad_update"}
egui = "0.28"

nanoserde = "0.1.35"
#grids = "0.2.3"
#grids = { git = "https://github.com/kampffrosch94/grids", branch = "grid_math", features = ["serde"] }
cosync = "0.2.1"
serde_json = "1.0.131"
serde = { version = "1.0.210", features = ["derive"] }
slotmap = { version = "1.0.7", features = ["serde"] }
itertools = "0.13.0"
inline_tweak = "1.1.1"
atomic_refcell = "0.1.13"
anyhow = { version = "1.0.91", features = ["backtrace"] }
tween = "2.0.3"
derive_more = { version = "1.0.0", features = ["full"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 1
